--- a/notebooks/3_llm_extract_data.ipynb
+++ b/notebooks/3_llm_extract_data.ipynb
@@ -31,7 +31,8 @@
     "from langchain_openai import ChatOpenAI\n",
     "from langchain.prompts import ChatPromptTemplate\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
-    "from langchain.docstore.document import Document"
+    "from langchain.docstore.document import Document\n",
+    "import yaml"
    ]
   },
   {
@@ -163,12 +164,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1772aff5",
+   "execution_count": null,
+   "id": "b14ceb4e-a613-4257-99dc-0be012a97a61",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['OPENAI_API_KEY'] = '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'\n",
+    "config_file = '/home/ec2-user/SageMaker/genebanks/genebank-general/config/config.yml'\n",
+    "with open(config_file, 'r') as file:\n",
+    "    config = yaml.safe_load(file)\n",
+    "\n",
+    "# Establecer las variables de entorno\n",
+    "for key, value in config.items():\n",
+    "    os.environ[key] = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cd0288b-336d-4d1c-af33-c14884fdf6cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
     "openAIModelName = 'gpt-4-turbo'"
    ]
   },
