--- a/notebooks/2_ocr.ipynb
+++ b/notebooks/2_ocr.ipynb
@@ -5,10 +5,6 @@
    "execution_count": 1,
    "id": "d0cb95d2",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -32,34 +28,16 @@
     }
    ],
    "source": [
-    "pip install fastparquet"
+    "pip install fastparquet pyarrow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f8b4689c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pyarrow in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (15.0.2)\n",
-      "Requirement already satisfied: numpy<2,>=1.16.6 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from pyarrow) (1.22.4)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install pyarrow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "2a8e7e21",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Librerias\n",
@@ -98,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Función que extrae el texto de una imagen (con excepciones)\n",
+    "# Función que extrae el texto de una imagen\n",
     "def text_from_image(image_path, textract_client):\n",
     "    try:\n",
     "        with open(image_path, 'rb') as image:\n",
